Benchmark LV-private symbol keys against STRING
Step 10 of the live view SYMBOL partition-key plan: measure the
shipped translated key domain against the STRING domain it replaces,
in one build, and record the costs apart from the savings.

The STRING control had to be rebuilt. Step 7 flipped translation on for
every direct SYMBOL term, so LiveViewSteadyStateBenchmark had no legacy
domain left to select. Step 8's persisted decision gives it one back:
--partition-key-mode=legacy now rewrites the freshly created view's
_lv with NOTHING_TRANSLATES and reloads the view before its first
refresh, which is the path a view created by an older build takes.
--map-entry-size moves cairo.sql.unordered.map.max.entry.size so the
narrow anchor's 16-byte boundary is stated rather than sat on, and
--key-type=int-swapped is the INT control with its three low bytes
reversed, so the key's little-endian image sorts in numeric order. The
per-batch table gains dict_size and interns; a run closes with the
dictionary's three resident structures reported apart, the dictionary
pages every retained metadata segment holds, the reverse index priced
against a forward-only load, and the restore time off
getHeadCheckpointRestoreMicros. LiveViewPartitionKeySinkBenchmark gains
a REGISTRY translator arm that drives the real LiveViewSymbolIdRegistry
beside the array stand-in.

The savings are real and smaller end to end than the sink benchmark
implied: the refresh less the seal drops 113 to 90 ms per 200K rows on
a recycled 100K key set, the narrow anchor selects Unordered4Map at
both the embedded and the server entry limit, and root state is a
third smaller. The seal regresses: 127 to 413 ms on the recycled set,
and 245 to 2228 ms with 14 to 105 MB per seal when every batch brings
200K new ids. The INT control, which carries no dictionary, pays the
same, so the cause is the 4-byte key itself, and the controls separate
two: the codec writes the key little-endian, so sequential ids scatter
across every 